* Compile-time settings for MAX_XYMON_INBUFSZ have been split into two 
  variables and made global, to allow for larger extcombo and/or 
  compressed messages: 
  MAX_XYMON_INBUFSZ - max size of a connection buffer, no matter the source
  MAX_XYMON_MSGSZ - max size of an uncompressed message sent on a channel
* Improved checking we don't hit combo size and msg number limits


Changes from 4.3.23 -> 4.3.24 (23 Nov 2015)
===========================================

* rev 7805

* Fix occasional crash in xymond when handling group names (Thanks, Franco Gasperino)
* Fix non-special HTTP <400 status codes red instead of yellow >.<


Changes from 4.3.22 -> 4.3.23 (12 Nov 2015)
===========================================
 
* rev 7740

* Fix broken 'TRACK' and 'OPTIONAL' identifiers in analysis.cfg
* Prevent logfetch from segfaulting if a file we're tracking line matching
  deltacounts for wasn't found
* Fix a type mismatch compiler warning in display group name alert matching


Changes from 4.3.21 -> 4.3.22 (6 Nov 2015)
===========================================

* rev 7723

* Ensure we don't leave xymond_hostdata or xymond_history zombies lying around
  after dropping host records (Reported by Scot Kreienkamp)
* Fix up HTML list layout to reflect current standards (Thanks, hallik@calyc3.com)
* Fix documentation incorrectly describing multigraph syntax as (e.g.) GRAPH_cpu.
  Should be GRAPHS_cpu (Thanks, Galen Johnson)
* Supports scientific notation for NCV data (Thanks, Axel Beckert)
* Increase resolution of xymonnet poll timing results (Thanks, Christoph Berg)
* New clock skew RRD files will allow for negative delta values (Thanks, Axel Beckert)
* Fix lots of typos! (Debian)
* Don't skip over "mailq.rrd" (Roland Rosenfeld)
* The signature algorithm used on an SSL-enabled TCP test run by xymonnet is now shown
  on the sslcert page. (Thanks, Ralph Mitchell)
* The cipher list displayed in 'sslcert' tests will now be limited to the cipher that was 